# openpose_ros

./: CMakeLists.txt  README.md  package.xml
include/: gflags_options.h  openpose_ros_io.h
launch/: openpose_ros.launch
msg/: OpenPoseHumanBodyAndFace.msg  OpenPoseHumanBodyAndHands.msg  OpenPoseHumanBodyHandsAndFace.msg  OpenPoseHumanBodyOnly.msg  OpenPoseHumanListBodyAndFace.msg  OpenPoseHumanListBodyAndHands.msg  OpenPoseHumanListBodyHandsAndFace.msg  OpenPoseHumanListBodyOnly.msg
openpose_ros/: CMakeLists.txt  package.xml
openpose_ros/config/: config.yaml
openpose_ros/include/: gflags_options.h  openpose.h  openpose.hpp  openpose_flags.h  openpose_flags.hpp  openpose_ros_io.h  openpose_ros_io.hpp
openpose_ros/launch/: openpose_ros.launch  openpose_ros.launch.py
openpose_ros/src/: gflags_options.cpp  openpose.cpp  openpose_flags.cpp  openpose_ros_io.cpp  openpose_ros_node.cpp
openpose_ros_msgs/: CMakeLists.txt  package.xml
openpose_ros_msgs/msg/: BoundingBox.msg  OpenPoseHuman.msg  OpenPoseHumanList.msg  PointWithProb.msg
src/: gflags_options.cpp  openpose_ros_io.cpp  openpose_ros_node.cpp  openpose_ros_node_with_face.cpp  openpose_ros_node_with_face_and_hands.cpp
