<?xml version="1.0"?>
<package>
  <name>openpose_ros</name>
  <version>1.2.1</version>
  <description>The openpose_ros package</description>

  <maintainer email="kevinleezhang@gmail.com">Kevin Zhang</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/firephinx/openpose_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>openpose_ros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>OpenCV</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>openpose_ros_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

</package>
