<?xml version="1.0"?>
<package format="3">
  <name>openpose_ros</name>
  <version>1.2.1</version>
  <description>The openpose_ros package</description>

  <maintainer email="kevinleezhang@gmail.com">Kevin Zhang</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/firephinx/openpose_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>openpose_ros_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>openpose_ros_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
