<?xml version="1.0"?>
<package>
  <name>openpose_ros_msgs</name>
  <version>1.2.1</version>
  <description>The openpose_ros_msgs package</description>

  <maintainer email="kevinleezhang@gmail.com">Kevin Zhang</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/firephinx/openpose_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
