<?xml version="1.0"?>
<package format="3">
  <name>openpose_ros_msgs</name>
  <version>1.2.1</version>
  <description>The openpose_ros_msgs package</description>

  <maintainer email="kevinleezhang@gmail.com">Kevin Zhang</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
